--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,8 @@
 <ul>
     <li ><a href="nadador/list">Gestió de Nadadors</a></li>
     <li><a href="prova/list">Gestió de Provas</a></li>
+    <li><a href="classificacio/list">Gestió de Classificacio</a></li>
+
 </ul>
 </body>
 </html>
