--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,10 @@
 <body>
 <h1>Gestió del Club Esportiu</h1>
 <ul>
-    <li ><a href="nadador/list">Gestió de Nadadors</a></li>
-    <li><a href="prova/list">Gestió de Provas</a></li>
-    <li><a href="classificacio/list">Gestió de Classificacio</a></li>
+    <li ><a href="nadador/list" >Gestió de Nadadors</a></li>
+    <li><a href="prova/list" >Gestió de Provas</a></li>
+    <li><a href="classificacio/list"  >Gestió de Classificacio</a></li>
+    <li><a href="classificacio/perpais" >Perpais</a></li>
 
 </ul>
 </body>
