sesion 6, queda cosas por hacer, pero mas o menos la cosa pinta bien. Lo de listar los usuarios iba, hasta que vino Javi a romperlo.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,8 @@
 <body>
 <h1>Gestió del Club Esportiu</h1>
 <ul>
+
+    <li ><a href="user/list" >INICO DE SESION</a></li>
     <li ><a href="nadador/list" >Gestió de Nadadors</a></li>
     <li><a href="prova/list" >Gestió de Provas</a></li>
     <li><a href="classificacio/list"  >Gestió de Classificacio</a></li>
